--- a/style.css
+++ b/style.css
@@ -1,29 +1,10 @@
 *{
-    margin:0;
+    margin: 0;
 
     padding: 0;
 }
-
-a{
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3;
+.navbar {
+    display: flex;
+    position: sticky;
+    align-items: center;
 }
-a:hover{
-    opacity: 0.7;
-}
-.logo{
-    font-size:24px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-}
-
-.nav{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-   font-family:  Cambria, Cochin, Georgia, Times, 
- 'Times New Roman', serif;
- background-color: rgb(57, 153, 153);
- height: 8vh;
- }
